Name:			tremulous-query
Version:		2
Author:			Christoffer Öjeling
Maintainer:		cadynum@gmail.com
License:		OtherLicense
License-File:		LICENSE
Category:		Network
Synopsis:		A library for polling tremulous servers
Description:		A library for polling tremulous servers

Cabal-Version:		>= 1.10
Build-Type:		Simple
Data-Files:
Tested-With:            GHC==7.0.2

Library
  Default-Language:     Haskell2010
  Default-Extensions:   BangPatterns TupleSections NamedFieldPuns RecordWildCards
                        ScopedTypeVariables OverloadedStrings DeriveDataTypeable
  Other-Extensions:     CPP StandaloneDeriving
  Exposed-Modules:
                        Tremulous.Protocol
                        Tremulous.Polling
                        Tremulous.Util
                        Tremulous.NameInsensitive
                        Tremulous.SocketExtensions
                        Tremulous.ByteStringUtils
  Other-Modules:        Tremulous.Scheduler

  Build-Depends:        base>=4.3, array, old-time, network, deepseq, containers, strict-concurrency,
                        bytestring, attoparsec
  Ghc-Options:          -Wall -threaded -fno-warn-unused-do-bind -fno-warn-orphans -funbox-strict-fields
  


