Name:			tremulous-query
Version:		1.0
Author:			Christoffer Öjeling
Maintainer:		cadynum@gmail.com
License:		OtherLicense
License-File:		LICENSE
Category:		Network
Synopsis:		A library for polling tremulous servers
Description:		A library for polling tremulous servers

Cabal-Version:		>= 1.10
Build-Type:		Simple
Data-Files:
Tested-With:            GHC==7.0.2

Library
  Default-Language:     Haskell2010
  Default-Extensions:   BangPatterns TupleSections NamedFieldPuns RecordWildCards
                        ScopedTypeVariables OverloadedStrings DeriveDataTypeable
  Other-Extensions:     CPP StandaloneDeriving
  Exposed-Modules:
                        Network.Tremulous.Protocol
                        Network.Tremulous.Polling
                        Network.Tremulous.Util
                        Network.Tremulous.NameInsensitive
                        Network.Tremulous.SocketExtensions
                        Network.Tremulous.ByteStringUtils
                        Network.Tremulous.Scheduler

  Build-Depends:        base>=4.3, old-time, network, deepseq, containers, strict-concurrency,
                        bytestring, attoparsec
  Ghc-Options:          -Wall -threaded -fno-warn-unused-do-bind -fno-warn-orphans -funbox-strict-fields



